Optimizations for instance variable CSV export, and minor UI fixes
- CSV export no longer uses referrers when fetching instance variables as they are known to hinder performance with search indices
- CSV export has now new field formatting for the last modified date property which was added recently
- CSV export button is no longer shown if there are no instance variables to export
- editor login page uses a dotted line instead of a dashed one for login advice
- editor login input fields have now a set maximum width when the screen is resized to a small size which addresses the input fields looking too big when just below the screen threshold

Issue-ID: No particular issue-ID

--- a/client/src/app/views/editor/login/login-advice.component.css
+++ b/client/src/app/views/editor/login/login-advice.component.css
@@ -11,7 +11,7 @@
 
 .login-advice {
   text-decoration: underline;
-  text-decoration-style: dashed; 
+  text-decoration-style: dotted; 
 }
 
 .login-advice.tooltip-padding {
